--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -10,14 +10,16 @@
 .mat-dialog-title{
     margin: 0 0 20px;
     display: block;
-    border-radius: 6px;
 }
+.separated{
+    border-bottom: 1px solid #929292;
+  }
 mat-header-cell{
     background-color:#EEEEEE;
 }
 mat-expansion-panel{
-    margin:10px 20px !important;
     background-color: #298CDE;
+    margin-bottom: 10px;
 }
 mat-panel-title{
     font-size: 17px;
