--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -11,6 +11,12 @@
     margin: 0 0 20px;
     display: block;
 }
+.crud-search{
+    border:1px solid #D3D6DD;
+}
+.checkmark_icon{
+    color:#5bb75b;
+}
 .separated{
     border-bottom: 1px solid #929292;
   }
