add: error-handler comp

--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="formGroup">
-    <mat-form-field>
+    <mat-form-field style="width: 90%;">
         <mat-label>{{ config.label }}</mat-label>
         <mat-icon class="input_icon" style="color: rgba(165, 151, 151, 0.87);
         cursor: pointer;
