--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -39,7 +39,7 @@
         </mat-expansion-panel-header>
 
         <div #searchComponent></div>
-
+        <ng-error-handling></ng-error-handling>
     </mat-expansion-panel>
 </ng-template>
 
