--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -1,7 +1,7 @@
 <!-- <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar> -->
 
 
-<div class="container">
+<div class="form-body">
     <ng-template [ngIf]="is_ready">
         <!-- <div class="form-container"> -->
         <div class="row" [formGroup]="formGroup">
@@ -10,7 +10,7 @@
                     <div class="fieldset">
                         <h4>{{ config.label }}</h4>
                         <ng-container *ngFor="let config2 of config.fields">
-                            <ng-crud-form-field [reset]="submit" [formGroup]="formGroup" [config]="config2"></ng-crud-form-field>
+                            <ng-crud-form-field class="FormCell" [reset]="submit" [formGroup]="formGroup" [config]="config2"></ng-crud-form-field>
                         </ng-container>
                     </div>
                 </ng-container>
@@ -18,7 +18,7 @@
                             <ng-crud-formset [config]="config" [formGroup]="form"></ng-crud-formset>
                         </ng-container> -->
                 <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset'">
-                    <ng-crud-form-field [reset]="submit" [formGroup]="formGroup" [config]="config"></ng-crud-form-field>
+                    <ng-crud-form-field class="FormCell" [reset]="submit" [formGroup]="formGroup" [config]="config"></ng-crud-form-field>
                 </ng-container>
             </ng-container>
         </div>
