--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -1,7 +1,7 @@
 <!-- <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar> -->
 
 
-<div class="form-body">
+<div class="crud-form-body">
     <ng-template [ngIf]="is_ready">
         <!-- <div class="form-container"> -->
         <div class="row" [formGroup]="formGroup">
