--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -13,8 +13,7 @@
 .actions{
     justify-content: flex-end !important;
 }
-.form-body{
-    padding-bottom: 75px;
+.crud-form-body{
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
