--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -15,8 +15,8 @@
             {{ option[controlConfig.metadata.optionName] }}
         </mat-option>
     </mat-autocomplete>
-    <button mat-icon-button matPrefix (click)="removeSelection()" style="margin: -20px;"
-    *ngIf="formGroup.get([config.resolveValueFrom]).value!==null">
-    <mat-icon [color]="'warn'" style="font-size: inherit;">close</mat-icon>
-</button>
+    <button mat-icon-button matPrefix (click)="removeSelection()" style="margin: -20px;" *ngIf="formGroup.get([config.resolveValueFrom])!==null &&
+    formGroup.get([config.resolveValueFrom]).value!==null">
+        <mat-icon [color]="'warn'" style="font-size: inherit;">close</mat-icon>
+    </button>
 </div>
