--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -17,6 +17,9 @@
 .checkmark_icon{
     color:#5bb75b;
 }
+.views-button{
+    float: right;
+}
 .separated{
     border-bottom: 1px solid #929292;
   }
