--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="!viewConfig.dialog_mode">
-    <ng-container *ngIf="viewConfig?.external_create_link;else normal">
-        <a mat-button [href]="viewConfig?.external_create_link + 'add/?frameless=1'" color="primary">
+    <ng-container *ngIf="viewConfig?.external_link;else normal">
+        <a mat-button [href]="viewConfig?.external_link.link + 'add/?' + viewConfig?.external_link.params.join('&')" color="primary">
             <mat-icon>add</mat-icon> Create
         </a>
     </ng-container>
@@ -72,8 +72,8 @@
           column.Def !== 'functions'">
             <mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
             <mat-cell *matCellDef="let row">
-                <ng-container *ngIf="viewConfig?.external_create_link;else normal">
-                    <a class="clickable" [href]="viewConfig?.external_create_link + row?.id + '/?frameless=1'"
+                <ng-container *ngIf="viewConfig?.external_link;else normal">
+                    <a class="clickable" [href]="viewConfig?.external_link.link + row?.id + '/?' + viewConfig?.external_link.params.join('&')"
                     *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
                     {{ column.cell(row)}}
                 </a>
