add formActions and fix action buttons

--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="control">
+<div *ngIf="control" style="margin: 10px;">
     <div class="row">
         <h4> {{ config.label }}</h4>
         <span class="spacer"></span>
